[gd_scene load_steps=5 format=3 uid="uid://dntpugofgkxl2"]

[ext_resource type="Script" path="res://scene/main_menu.gd" id="1_crfbj"]
[ext_resource type="Texture2D" uid="uid://bo4sdom6ogwqy" path="res://assets/World and level select/mainmenubackground.png" id="2_es7fl"]
[ext_resource type="Texture2D" uid="uid://djyc7jlhvx6dp" path="res://assets/base assets/tony/test_rat_just_falling_1frame.png" id="3_atraq"]

[sub_resource type="SystemFont" id="SystemFont_o6gfg"]
font_names = PackedStringArray("Futura")

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_crfbj")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_es7fl")
expand_mode = 3

[node name="TextureRect" type="TextureRect" parent="TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -105.0
offset_top = -75.0
offset_right = 95.0
offset_bottom = 125.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_atraq")
expand_mode = 5

[node name="Label" type="Label" parent="TextureRect"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -295.0
offset_top = 82.0
offset_right = 315.0
offset_bottom = 170.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("SystemFont_o6gfg")
theme_override_font_sizes/font_size = 64
text = "A Rat Through Time"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 40.0
offset_top = -140.0
offset_right = 155.0
offset_bottom = -39.0
grow_vertical = 0

[node name="Play" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../Quit")
text = "Play"

[node name="Leaderboards" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Leaderboards"

[node name="Sign In" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Sign In"

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../Play")
text = "Quit
"

[connection signal="pressed" from="VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="VBoxContainer/Leaderboards" to="." method="_on_leaderboards_pressed"]
[connection signal="pressed" from="VBoxContainer/Sign In" to="." method="_on_sign_in_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
